Changing LOGO and Design

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       body, html {font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; margin:0; padding:0; background: #eaeaea; color:#333;height:100%;}
       .wrap {display:table; width:100%; max-width:1024px; margin:15px auto; height:calc(100vh - 30px); box-sizing:border-box; border-radius:4px; box-shadow:0px 0px 9px 0px rgba(50, 50, 50, 0.3); background:#fff; overflow:hidden;}
-      header { display:table-cell; background: url('https://i.imgur.com/UCILDFJ.jpg') no-repeat #000; background-size:100% 100%; width:300px; color:#fff; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 110%;}
+      header { display:table-cell; background: url('https://i.imgur.com/FC0PBV5.png') no-repeat #000; background-size:100% 100%; width:300px; color:#fff; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 110%;}
       #bot {display:table-cell; vertical-align:top; height: 90%; position:relative;}
       .logo img {width:100px;}
       .medibuddy { display: block; color: #068bc7; margin-left: 5px; height: 32px; line-height: 30px; font-size: 22px;}
@@ -39,7 +39,7 @@
       .wc-message-group-content {padding:20px 40px; overflow:visible;}
       .wc-message-wrapper { overflow:visible; width: 100%; float: left;}
       .wc-message-from-me:before {background: url('https://i.imgur.com/WSq9P7O.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; right: -41px; top: 0px;}
-      .wc-message-from-bot:before {background: url('https://i.imgur.com/4hzBhFg.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; left: -41px; top: 0px; border-radius:50%}
+      .wc-message-from-bot:before {background: url('https://i.imgur.com/VO9Bql3.png') no-repeat; background-size: cover; height: 30px; width: 30px; position: absolute; content: ' '; left: -41px; top: 0px; border-radius:50%}
 
       .wc-message-content {padding:11px 20px; box-shadow:0px 2px 4px 0px rgba(0,0,0,0.10);}
 
@@ -106,7 +106,7 @@
   </head>
   <body>
     <div class="head-sm" id="hdrSm" onClick="showHdr()">
-      <div class="logo"><img src="https://i.imgur.com/8avm83b.png" alt=""><!--<img src="https://i.imgur.com/UWTYAae.png" alt="">--><span class="medibuddy">Medi<span>Buddy</span></span></div>
+      <div class="logo"><img src="https://i.imgur.com/mM4QU5G.gif" alt=""><!--<img src="https://i.imgur.com/UWTYAae.png" alt="">--><span class="medibuddy">Medi<span>Buddy</span></span></div>
     </div>
     <div class="wrap">
       <div id="bot"></div>
