--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="wrap">
       <div id="bot"></div>
       <header id="hdr">
-        <div class="logo"><img src="https://i.imgur.com/8avm83b.png" alt=""><!--<img src="https://i.imgur.com/Nsxo4EK.png" alt="">--><span class="medibuddy">Medi<span>Buddy</span></span></div>
+        <div class="logo"><img src="https://i.imgur.com/mM4QU5G.gif" alt=""><!--<img src="https://i.imgur.com/Nsxo4EK.png" alt="">--><span class="medibuddy">Medi<span>Buddy</span></span></div>
         <div class="status online"><span class="icon-circle sidebar-online"></span> online now</div>
         <h2>Hi! I am your health buddy and I will help you manage all your healthcare needs! Ask me anything, and I'll try my best to get you the answers that you need.</h2>
         <p><a href="javascript:void(0);" onClick="hideHdr();" class="showSearch">Start chat now</a></p>
