Changing LOGO and Design

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       header { display:table-cell; background: url('https://i.imgur.com/FC0PBV5.png') no-repeat #000; background-size:100% 100%; width:300px; color:#fff; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 110%;}
       #bot {display:table-cell; vertical-align:top; height: 90%; position:relative;}
       .logo img {width:100px;}
-      .medibuddy { display: block; color: #068bc7; margin-left: 5px; height: 32px; line-height: 30px; font-size: 22px;}
+      .medibuddy { background:white; border-radius: 4px; display: block; color: #068bc7; margin-left: 5px; height: 32px; line-height: 30px; font-size: 22px;}
       .medibuddy span {color: #e0414f;}
 
       .social{text-align: center; margin-top:182px;}
