--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       .showSearch {display:none; background:#fff; color:#068bc7; text-decoration:none; padding:8px 20px; border-radius:2px;}
       .showSearch:hover{background-color: #0078d7; border-color: #0078d7; color: white;}
 
-      .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/FC0PBV5.png') no-repeat #e85868; padding:10px; display:none; z-index:1;}
+      .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/FC0PBV5.png') repeat-x #e85868; padding:10px; display:none; z-index:1;}
       .head-sm .logo img {width:40px; vertical-align:middle;}
       .head-sm.show {display:block;}
       .head-sm .medibuddy {display:inline-block;}
