--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <style>
       body, html {font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; margin:0; padding:0; background: #eaeaea; color:#333;height:100%;}
       .wrap {display:table; width:100%; max-width:1024px; margin:15px auto; height:calc(100vh - 30px); box-sizing:border-box; border-radius:4px; box-shadow:0px 0px 9px 0px rgba(50, 50, 50, 0.3); background:#fff; overflow:hidden;}
-      header { display:table-cell; background: url('https://i.imgur.com/HA32ERE.png') no-repeat #e85464; background-size:100% 100%; width:300px; color:#fff; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 110%;}
+      header { display:table-cell; background: url('https://i.imgur.com/HA32ERE.png') no-repeat white; background-size:100% 100%; width:300px; color:#4A4A4A!important; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 110%;}
       #bot {display:table-cell; vertical-align:top; height: 90%; position:relative;}
       .logo img {width:200px;}
       .medibuddy { background:white; vertical-align: sub; min-width: 135px; text-align: center; border-radius: 4px; display: block; color: #068bc7; margin-left: 5px; height: 32px; line-height: 30px; font-size: 22px;}
-      .medibuddy span {color: #e0414f;}
+      .medibuddy span {color: white;}
 
       .social{text-align: center; margin-top:182px;}
       .social a { display: inline-block; margin: 0 0 0 4px!important; transition: .5s; clear: both; float: none; width: 14px; height: 14px; padding: 8px; border-radius: 20px; border: 1px solid #ddd; overflow: hidden; text-align: center; line-height: 12px; background: #fff;}
@@ -28,7 +28,7 @@
       .showSearch {display:none; background:#fff; color:#068bc7; text-decoration:none; padding:8px 20px; border-radius:2px;}
       .showSearch:hover{background-color: #0078d7; border-color: #0078d7; color: white;}
 
-      .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/HA32ERE.png') repeat-x #e85868; padding:10px; display:none; z-index:1;}
+      .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/HA32ERE.png') repeat-x white; padding:10px; display:none; z-index:1;}
       .head-sm .logo img {width:40px; vertical-align:middle;}
       .head-sm.show {display:block;}
       .head-sm .medibuddy {display:inline-block;}
