--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       .wc-console {border:0; border-top:2px solid #ddd;}
       .wc-console .wc-textbox input {padding-left:15px; color: #4A4A4A!important;}
 
-      .showSearch {display:none; background:#fff; color:#068bc7; text-decoration:none; padding:8px 20px; border-radius:2px;}
+      .showSearch {display:none; background:#eaeaea; color:#068bc7; text-decoration:none; padding:8px 20px; border-radius:2px;}
       .showSearch:hover{background-color: #0078d7; border-color: #0078d7; color: white;}
 
       .head-sm {position:absolute; top:0; right:0; left:0; background: url('https://i.imgur.com/HA32ERE.png') repeat-x white; padding:10px; display:none; z-index:1;}
