--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="UTF-8">
     <style>
-      body, html {font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; margin:0; padding:0; background: #eaeaea; color:#333;height:100%;}
+      body, html {font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; margin:0; padding:0; background: white; color:#333;height:100%;}
       .wrap {display:table; width:100%; max-width:1024px; margin:15px auto; height:calc(100vh - 30px); box-sizing:border-box; border-radius:4px; box-shadow:0px 0px 9px 0px rgba(50, 50, 50, 0.3); background:#fff; overflow:hidden;}
       header { display:table-cell; background: url('https://i.imgur.com/HA32ERE.png') no-repeat white; background-size:100% 100%; width:300px; color:#4A4A4A!important; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 110%;}
       #bot {display:table-cell; vertical-align:top; height: 90%; position:relative;}
