--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       #bot {display:table-cell; vertical-align:top; height: 90%; position:relative;}
       .logo img {width:200px;}
       .medibuddy { background:white; vertical-align: sub; min-width: 135px; text-align: center; border-radius: 4px; display: block; color: #068bc7; margin-left: 5px; height: 32px; line-height: 30px; font-size: 22px;}
-      .medibuddy span {color: white;}
+      .medibuddy span {color: #e0414f;}
 
       .social{text-align: center; margin-top:182px;}
       .social a { display: inline-block; margin: 0 0 0 4px!important; transition: .5s; clear: both; float: none; width: 14px; height: 14px; padding: 8px; border-radius: 20px; border: 1px solid #ddd; overflow: hidden; text-align: center; line-height: 12px; background: #fff;}
