--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       .wc-header, .wc-upload, .wc-message-from-me.wc-message-from, .wc-message-from {display:none!important;}
       .wc-console .wc-textbox {left:0;}
-      .wc-console {border:0; border-top:2px solid #ddd;}
+      .wc-console {border:0; border-top:2px solid #ddd;border-right: 8px solid #ddd;}
       .wc-console .wc-textbox input {padding-left:15px; color: #4A4A4A!important;}
 
       .showSearch {display:none; background:#eaeaea; color:#068bc7; text-decoration:none; padding:8px 20px; border-radius:2px;}
