--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         .wc-message-group-content {padding-right:0;}
         .wc-message-from-bot {margin-left:0;}
         .wc-message-from-me:before {display:none;}
-        .wc-card.wc-adaptive-card.hero .ac-image {max-width:100px}
+        .wc-card.wc-adaptive-card.hero .ac-image {max-width:100px; display: block; margin: 0 auto;}
         .wc-message-from-bot:before {width:24px; height:24px; left:-30px;}
         .wc-message-from-bot .wc-message-content {padding:10px;}
         .wc-adaptive-card {width:100%}
