--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       svg.wc-message-callout {display:none;}
 
       .wc-message-from-bot .wc-message-content {background:#fff; border-radius:10px;}
-      .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important;}
+      .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important; text-align: justify!important;}
 
       .wc-message-from-me:after {background: url('https://i.imgur.com/Lj0PH5H.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
       .wc-message-from-bot:after {background:url('https://i.imgur.com/weoRtnw.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
