--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
 <style>
       body, html {font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; margin:0; padding:0; background: white; color:#333;height:100%;}
+
+      select, input:not([type=checkbox]):not([type=radio]), text-area {border: 1px solid #ced4da; width: 100%; padding: .375rem .75rem;}
       .wrap {display:table; width:100%; max-width:1024px; margin:15px auto; height:calc(100vh - 30px); box-sizing:border-box; border-radius:4px; box-shadow:0px 0px 9px 0px rgba(50, 50, 50, 0.3); background:#fff; overflow:hidden;}
       header { display:table-cell; background: url('https://i.imgur.com/HA32ERE.png') no-repeat white; background-size:100% 100%; width:300px; color:#4A4A4A!important; text-align:center; padding: 40px 20px 20px 20px; box-sizing: border-box; height: 110%;}
       #bot {display:table-cell; vertical-align:top; height: 90%; position:relative;}
@@ -51,7 +53,7 @@
       svg.wc-message-callout {display:none;}
 
       .wc-message-from-bot .wc-message-content {background:#fff; border-radius:10px;}
-      .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important; text-align: justify!important;}
+      .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important;}
 
       .wc-message-from-me:after {background: url('https://i.imgur.com/Lj0PH5H.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
       .wc-message-from-bot:after {background:url('https://i.imgur.com/weoRtnw.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
@@ -90,8 +92,7 @@
           -webkit-font-smoothing: antialiased;
           -moz-osx-font-smoothing: grayscale;
       }
-
-      select, input:not([type=checkbox]):not([type=radio]), text-area {border: 1px solid #ced4da; width: 100%; padding: .375rem .75rem;}
+      .wc-console .wc-textbox input {border:0; padding:0 0 0 15px;}
 
       @media (max-width: 1024px){
         .wrap {max-width:960px;}
@@ -110,10 +111,20 @@
         .wc-message-group-content {padding-right:0;}
         .wc-message-from-bot {margin-left:0;}
         .wc-message-from-me:before {display:none;}
-        .wc-card.wc-adaptive-card.hero .ac-image {max-width:100px; display: block; margin: 0 auto;}
+        .wc-card.wc-adaptive-card.hero .ac-image {max-width:100px}
         .wc-message-from-bot:before {width:24px; height:24px; left:-30px;}
         .wc-message-from-bot .wc-message-content {padding:10px;}
+        .wc-carousel {width:339px!important;}
         .wc-adaptive-card {width:100%}
+      }
+      @media (max-width: 375px){
+        .wc-carousel {width:278px!important;}
+      }
+      @media (max-width: 360px){
+        .wc-carousel {width:278px!important;}
+      }
+      @media (max-width: 320px){
+        .wc-carousel {width:230px!important;}
       }
     </style>
 	 <title>MediBuddy - Conversation Bot</title>
