fixed responsive issue 2

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       svg.wc-message-callout {display:none;}
 
       .wc-message-from-bot .wc-message-content {background:#fff; border-radius:10px;}
-      .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important;}
+      .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important; text-align: justify;}
 
       .wc-message-from-me:after {background: url('https://i.imgur.com/Lj0PH5H.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
       .wc-message-from-bot:after {background:url('https://i.imgur.com/weoRtnw.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
@@ -111,7 +111,7 @@
         .wc-message-group-content {padding-right:0;}
         .wc-message-from-bot {margin-left:0;}
         .wc-message-from-me:before {display:none;}
-        .wc-card.wc-adaptive-card.hero .ac-image {max-width:100px}
+        .wc-card.wc-adaptive-card.hero .ac-image {max-width:100px; margin:0 auto;}
         .wc-message-from-bot:before {width:24px; height:24px; left:-30px;}
         .wc-message-from-bot .wc-message-content {padding:10px;}
         .wc-carousel {width:339px!important;}
