--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       .wc-message-from-bot .wc-message-content {background:#fff; border-radius:10px;}
       .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important;}
 
+      .wc-message-content .ac-container{text-align: center;}
+
       .wc-message-from-me:after {background: url('https://i.imgur.com/Lj0PH5H.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
       .wc-message-from-bot:after {background:url('https://i.imgur.com/weoRtnw.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
 
