--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
       .wc-message-content .ac-container div:nth-child(3){text-align: center!important;}
       .wc-message-content .ac-container div:nth-child(4){text-align: justify!important; min-height:51px;}
-      .wc-message-content .wc-adaptive-card .ac-container div:nth-child(3){text-align: center!important;}
-      .wc-message-content .wc-adaptive-card .ac-container div:nth-child(4){text-align: justify!important; min-height:51px;}
+      .wc-carousel li .wc-adaptive-card .ac-container div:nth-child(2){text-align: center!important;}
+      .wc-carousel li .wc-adaptive-card .ac-container div:nth-child(3){text-align: justify!important; min-height:51px;}
 
       .wc-message-from-me:after {background: url('https://i.imgur.com/Lj0PH5H.png') no-repeat; height: 40px; width: 40px; position: absolute; content: ' '; right: -13px; top: -11px;}
       .wc-message-from-bot:after {background:url('https://i.imgur.com/weoRtnw.png') no-repeat; z-index: 2; height: 15px; position: absolute; content: ' '; left: -11px; top: -3px; width: 24px;}
