New Feedback Form

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       .wc-message-from-bot .wc-message-content p {color:#4A4A4A!important;}
 
       .wc-message-content .ac-container div:nth-child(3){text-align: center!important;}
-      .wc-message-content .ac-container div:nth-child(4){text-align: justify!important; min-height:51px;}
+      .wc-message-content .ac-container div:nth-child(4){text-align: justify!important;}
       .wc-carousel li .video .ac-container div:nth-child(1){text-align: center!important;}
       .wc-carousel li .video .ac-container div:nth-child(3){text-align: justify!important; min-height:51px;}
 
