Updating STT and TTS

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
       };
 
       BotChat.App({
-        directLine: { secret: '0TjVVFscnUY.cwA.GWM.iCDsLb1adwGX2WxyjAy9L1Bku3YN2xGnW8TIBm31dSw',
-        webSocket: params['webSocket'] && params['webSocket'] === 'true' // defaults to true
+        directLine: { secret: '0TjVVFscnUY.cwA.GWM.iCDsLb1adwGX2WxyjAy9L1Bku3YN2xGnW8TIBm31dSw'
+   //     webSocket: params['webSocket'] && params['webSocket'] === 'true' // defaults to true
       },
         user: { id: '31db772c-9761-4b25-b568-f1e140b26b4a' },
         bot: { id: 'medibot_4ttx4fdwLSX' },
