Testing botframework TTS & STT 3

--- a/index.html
+++ b/index.html
@@ -160,11 +160,26 @@
 
     </div>
     <script src="https://cdn.botframework.com/botframework-webchat/latest/botchat.js"></script>
+    
+    <script src="https://cdn.botframework.com/botframework-webchat/latest/CognitiveServices.js"></script> 
     <script>
+
+      window.botchatDebug = params['debug'] && params['debug'] === 'true';
+
+      const speechOptions = {
+        speechRecognizer: new CognitiveServices.SpeechRecognizer({ subscriptionKey: 'b588383b9fee4dbfb3fe685576b674b8' }),
+        speechSynthesizer: new CognitiveServices.SpeechSynthesizer({
+          gender: CognitiveServices.SynthesisGender.Female,
+          subscriptionKey: 'b588383b9fee4dbfb3fe685576b674b8',
+          voiceName: 'Microsoft Server Speech Text to Speech Voice (en-US, JessaRUS)'
+        })
+      };
+
       BotChat.App({
         directLine: { secret: '0TjVVFscnUY.cwA.GWM.iCDsLb1adwGX2WxyjAy9L1Bku3YN2xGnW8TIBm31dSw' },
         user: { id: '31db772c-9761-4b25-b568-f1e140b26b4a' },
         bot: { id: 'medibot_4ttx4fdwLSX' },
+        speechOptions: speechOptions,
         resize: 'detect'
       }, document.getElementById("bot"));
       
