Native Speech Working - CSS Fix

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       .social svg {width: 14px; height: 14px;}
       h2 {font-weight: normal; font-size:14px; margin-top: 80px;}
 
-      /* .wc-header, .wc-upload {display:none!important;} */
+      .wc-header, .wc-upload {display:none!important;} 
       .wc-message-from-me.wc-message-from, .wc-message-from {display:none!important;}
-      /* .wc-console .wc-textbox {left:0;} */
+      .wc-console .wc-textbox {left:0;} 
       .wc-console {border:0; border-top:2px solid #ddd;border-right: 8px solid #ddd;}
       .wc-console .wc-textbox input {padding-left:15px; color: #4A4A4A!important;}
 
