Migrating bot to new env

--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
       };
 
       BotChat.App({
-        directLine: { secret: '0TjVVFscnUY.cwA.GWM.iCDsLb1adwGX2WxyjAy9L1Bku3YN2xGnW8TIBm31dSw' },
+        directLine: { secret: '0qGcHQmHvPw.cwA.a28.CzPF7I-ipezHeJXAvwY2K8iMToP9OMn7vI9YdLD49aY' },
         user: { id: '31db772c-9761-4b25-b568-f1e140b26b4a' },
-        bot: { id: 'medibot_4ttx4fdwLSX' },
+        bot: { id: 'MediBuddyWebAppBot' },
         speechOptions: speechOptions,
         resize: 'detect'
       }, document.getElementById("bot"));
