Adding Facebook login button

--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
       @media (max-height: 460px){
         .logo img {width: 100px;}
       }
+      
+    .fb-login-button{
+      margin: 20px 0px;
+    }
     </style>
     
    <title>MediBuddy - Conversation Bot</title>
