Added Google Analytics code

--- a/index.html
+++ b/index.html
@@ -265,5 +265,15 @@
         document.getElementById("hdrSm").classList.remove("show");
       }
     </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YK4PZ5N2ED"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YK4PZ5N2ED');
+</script>
   </body>
+  
 </html>
